finally solved it

--- a/src/main/resources/templates/user/userpage.html
+++ b/src/main/resources/templates/user/userpage.html
@@ -1,1 +1,11 @@
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Log in</title>
+</head>
+<body>
 <h1>this is an user page admin and user can access it</h1>
+<form form-metod="post" th:action="@{/logout}">
+    <button type="submit">LOGOUT</button>
+</form>
+</body>
+</html>
